--- a/index.html
+++ b/index.html
@@ -208,37 +208,43 @@ body {
 
 </style>
 
-<div class="chat_window">
-    <div class="top_menu">
-        <div class="buttons">
-            <div id="clear" class="button close"></div>
-            <div class="button minimize" ></div>
-            <div class="button maximize"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 col-sm-12">
+            <h1 class="text-center">
+                MongoChat 
+                <button id="clear" class="btn btn-danger">Clear</button>
+            </h1>
+            <div id="status"></div>
+            <div id="chat">
+                <input type="text" id="username" class="form-control" placeholder="Enter name...">
+                <br>
+                <div class="card">
+                    <div id="messages" class="card-block">
+
+                    </div>
+                </div>
+                <br>
+                <textarea id="textarea" class="form-control" placeholder="Enter message..."></textarea>
+            </div>
         </div>
-        <div class="title">Chat</div>
     </div>
-    <ul class="messages"></ul>
-    <div class="bottom_wrapper clearfix">
-        <div class="message_input_wrapper">
-            <input class="message_input" placeholder="Type your message here..." />
-        </div>
-        <div class="send_message">
-            <div class="icon"></div>
-            <div class="text">Send</div>
-        </div>
-    </div>
-</div>
-<div class="message_template">
-    <li class="message">
-        <div class="avatar"></div>
-        <div class="text_wrapper">
-            <div class="text"></div>
-        </div>
-    </li>
 </div>
 
+<script  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 <script>
-    
+    (function(){
+        var element = (id) => {
+            return document.getElementById(id);
+        }
+
+        // Get Elements
+         var status = element('status');
+        var messages = element('messages');
+        var textarea = element('textarea');
+        var username = element('username');
+        var clearBtn = element('clear');
+    })();
 </script>
 
 </html>
