--- a/index.html
+++ b/index.html
@@ -257,9 +257,15 @@ body {
                     sendStatus(statusDefault);
                 }, 4000);
             }
-        }
-
+        } 
         
+        // connecting to socket.io
+        var socket = io.connect('http://127.0.0.1:4000');
+
+        // Check for connection
+        if (socket !==undefined){
+          console.log('Connected socket!');
+        }
 
     })();
 </script>
