--- a/index.html
+++ b/index.html
@@ -280,7 +280,6 @@ body {
               }
             }
           });
-        }
 
         // Getting status from server
         socket.on('status', (data) => {
@@ -295,7 +294,7 @@ body {
 
         // Handling the input
         textarea.addEventListener("keydown", (event) => {
-          if (event.which === 13 && event.shift == false){
+          if (event.which === 13 && event.shiftKey == false){
             // Emit it to the sever
             socket.emit('input', {
               name: username.value,
@@ -305,6 +304,8 @@ body {
             event.preventDefault();
           }
         });
+
+        }
 
     })();
 </script>
