squahed some more bugs

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ body {
 
         var setStatus = (s) => {
             // Set Status
-            statusDefault = s;
+            status.textContent = s;
 
             if (s !== statusDefault){
                 var delay = setTimeout(() => {
@@ -281,29 +281,29 @@ body {
             }
           });
 
-        // Getting status from server
-        socket.on('status', (data) => {
-          // get message status
-          setStatus((typeof data === "object")? data.message: data);
+          // Getting status from server
+          socket.on('status', (data) => {
+            // get message status
+            setStatus((typeof data === "object")? data.message: data);
 
-          // If status is clear
-          if (data.clear){
-            textarea.value = '';
-          }
-        });
+            // If status is clear
+            if (data.clear){
+              textarea.value = '';
+            }
+          });
 
-        // Handling the input
-        textarea.addEventListener("keydown", (event) => {
-          if (event.which === 13 && event.shiftKey == false){
-            // Emit it to the sever
-            socket.emit('input', {
-              name: username.value,
-              message: textarea.value
-            });
+          // Handling the input
+          textarea.addEventListener("keydown", (event) => {
+            if (event.which === 13 && event.shiftKey == false){
+              // Emit it to the sever
+              socket.emit('input', {
+                name: username.value,
+                message: textarea.value
+              });
 
-            event.preventDefault();
-          }
-        });
+              event.preventDefault();
+            }
+          });
 
         }
 
