some more bugs!

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ body {
 
             if (s !== statusDefault){
                 var delay = setTimeout(() => {
-                    sendStatus(statusDefault);
+                    setStatus(statusDefault);
                 }, 4000);
             }
         } 
