handling chat clear

--- a/index.html
+++ b/index.html
@@ -305,6 +305,13 @@ body {
             }
           });
 
+          // Handling Chat clear
+          clearBtn.addEventListener('click', () => {
+            socket.emit('clear');
+          });
+
+          
+
         }
 
     })();
